--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -52,6 +52,7 @@ Nowadays RASM is used on big projects such as:
 \item calculs internes en double précision et arrondi correct
 \item compatibilité optionnelle avec Maxam ou AS80
 \item gestion dédiée des ROM et extensions mémoires
+\item importation de fichiers audio, avec conversion en DMA list (CPC+)
 \item calcul de la durée des instructions
 \end{itemize}
 \medbreak
@@ -72,6 +73,7 @@ La présente documentation est maintenue par Stéphane Sikora, merci de faire re
 \item all Z80 instructions are supported
 \item macros, conditionnal code, unlimited loops, local labels, switch/case
 \item double precision calculation with correct rounding
+\item audio file import, with automatic conversion into DMA lists (CPC+)
 \item optionnal compatibility with Maxam or AS80
 \item code duration evaluation
 \end{itemize}
