ajout option -wu

--- a/src/usage.tex
+++ b/src/usage.tex
@@ -264,6 +264,7 @@ Ces options sont moins courantes ,mais peuvent parfois etre utiles pour le débu
 \begin{itemize}
 \item -v : mode verbeux, affiche des informations et statistiques sur l'assemblage
 \item -void : permet de forcer l'utilisation de (void) pour les macros sans parametre (\ref{macro})
+\item -wu : Affiche des warnings lorsque des alias, des variables ou des labels sont déclarés mais non utilisés
 \item -d : produit des informations lors du pré-processing
 \item -a : produit des informations lors de l'assemblage
 \item -n : affiche les licences tierces
@@ -277,6 +278,7 @@ These options are useful in rare occasions, it can sometime help for tracking bu
 \begin{itemize}
 \item -v : verbose mode, display stats
 \item -void : enforce usage of (void) syntax for macros without parameter (\ref{macro})
+\item -wu : Display a warning when an alias, a variable or a label is declared, but not used
 \item -d : verbose detailed pre-processing
 \item -a : verbose detailed assembling
 \item -n : display third parties licences
