--- a/src/ext_syntaxe.tex
+++ b/src/ext_syntaxe.tex
@@ -426,9 +426,8 @@ REND
 
   Il est possible d'utiliser la valeur d'un label dans une commande (\texttt{ORG} par exemple) si et seulement si le label précède la directive.
 
-
-
   En mode DAMS\index{DAMS}, il est possible d'utiliser la déclaration désuète d'un label en le préfixant d'un point. L'appel à ce label se fera sans le point du début. L'usage des labels de proximité est alors désactivé.
+
 \end{xfr}
 
 \begin{xen}
@@ -468,33 +467,71 @@ rend
 \subsubsection{\xlang{Labels de proximité}{Proximity labels}}
 
 \begin{xfr}
-Hors d'une macro ou d'une boucle, les labels locaux héritent du label global qui précède. Exemple d'utilisation d'un label de proximité:
+Hors d'une macro ou d'une boucle, les labels locaux héritent du label global qui précède. 
+A l'interieur d'une boucle ou d'une macro, ils sont relatifs au label qui précède, qui est soit global, soit local.
+Exemple d'utilisation d'un label de proximité avec un label global:
 \end{xfr}
 
 \begin{xen}
-Proximity labels are prefixed with a dot, and are associated with the previous label. They can be used 'locally' directly with their 'short' names, and anymwhere with their full name:
+Proximity labels are prefixed with a dot, and are associated with the previous label. 
+They can be used 'locally' directly with their 'short' names, and anymwhere with their full name:
 \end{xen}
 
-
 \begin{code}
-routine1
+routine1:
 \ add hl,bc
 \ jr nc,.no\_overflow
 \ dec hl
 .no\_overflow
 \medskip
-routine2
+routine2:
 \ add hl,bc
 \ jr nc,.no\_overflow
 \ dec hl
 .no\_overflow
 \medskip
-routine3
+routine3:
 \ xor a
 \ ld hl,routine1.no\_overflow ; retrieve proximity label of routine1
 \ ld de,routine2.no\_overflow ; of routine2
 \ sbc hl,de
 \end{code}
+
+\subsubsection{\xlang{Combinaison de différents types de labels}{Mixing different kinds of labels}}
+
+\begin{xfr}
+L'exemple suivant permet de montrer les différentes combinaisons possibles, quand on mélange label global, local et de proximité. 
+Le code n'a pas grande utilité, si ce n'est à illustrer le principe:
+\end{xfr}
+
+\begin{code}
+  global: nop
+  .prox:  nop ; (1)
+  \medskip
+  repeat 2
+  \           jp .prox ;  (=> 1)
+  @label:   nop  ; (2)
+  .prox :   nop  ; (3)
+  @label2:  nop  ; (4)
+  .prox :   nop  ; (5) 
+  \           jp global.prox  ; (=> 1)
+  \           jp @label       ; (=> 2)
+  \           jp @label.prox  ; (=> 3)
+  \           jp @label2.prox ; (=> 5)
+  \           jp .prox        ; (=> 6)
+  rend
+  \medskip
+  \           jp .prox        ; (=> 1) 
+  \           jp global2.prox ; (=> 8)
+  \medskip
+  global2:    nop  ; (7)
+  \           jp .prox        ; (=> 8) 
+  .prox:      nop ; (8)
+  \           jp global.prox  ; (=> 1)
+  \           jp global2.prox ; (=> 8)
+  \           jp .prox        ; (=> 8) 
+  \end{code}
+  
 
 \subsection{\xlang{Structures de données}{Structures}}
 
