add module section (0.122)

--- a/src/ext_syntaxe.tex
+++ b/src/ext_syntaxe.tex
@@ -218,320 +218,11 @@ endswitch
 
 
 \subsection{\xlang{Boucles et macros}{Loops and Macros}}
+\include{loops}
+\include{macros}
 
-\subsubsection{REPEAT}\index{REPEAT}\index{REPEAT\_COUNTER}\index{REND}\index{UNTIL}
-
-\begin{verbatim}
-REPEAT <number of repetitions>[,counter] ... REND
-REPEAT ... UNTIL <condition>
-\end{verbatim}
-
-\begin{xfr}
-Répète un bloc d'instructions.
-On peut soit fixer un nombre de répétitions, soit utiliser le mode conditionnel avec la directive de fin de bloc \texttt{UNTIL}. Pour compatibilité avec Vasm, il est possible de finir un tel bloc par \texttt{ENDREP} ou \texttt{ENDREPEAT}
-\end{xfr}
-
-\begin{xen}
-This directive repeats a block of instructions. You may fix a number of repetition or use conditionnal mode with \texttt{UNTIL}. It is also possible to close such a bloc with \texttt{ENDREP} or \texttt{ENDREPEAT}, for Vasm compatibility.
-\end{xen}
-
-\begin{code}
-cnt=90
-repeat
-\    defb 64*sin(cnt)
-\    cnt=cnt-4
-until cnt\textless 0
-\end{code}
-
-\begin{xfr}
-Dans le cas de répétition non conditionnelle, il est possible de spécifier une variable qui contiendra le numéro d'itération.
-Cette variable (ici 'cnt') n'a pas besoin d'éxister, elle sera créée le cas echéant, au début de la boucle \texttt{REPEAT}.
-\end{xfr}
-
-\begin{xen}
-In the case of a non conditional loop, it is possible to specify a variable which contains the iteraction counter.
-There's no need to declare this variable (here 'cnt') prior to the \texttt{REPEAT} block. It will automatically be created.
-\end{xen}
-
-\begin{code}
-repeat 10,cnt
-\ ldi
-\ print cnt
-rend
-\end{code}
-
-% Compteur interne
-\begin{xfr}
-La variable interne \texttt{REPEAT\_COUNTER} contient le numéro de l'itération courante (en commencant par 1).
-\end{xfr}
-\begin{xen}
-You can get the internal loop counter anytime with internal variable \texttt{REPEAT\_COUNTER}.
-\end{xen}
-
-\begin{code}
-repeat 10
-\ ldi
-\ print repeat\_counter
-rend
-\end{code}
-
-
-\subsubsection{WHILE, WEND}\index{WHILE}\index{WEND}\index{WHILE\_COUNTER}
-\begin{verbatim}
-WHILE <condtion> ... wEND
-\end{verbatim}
-
-\begin{xfr}
-Répete un bloc tant que la condition est évaluée a vrai. A tout moment, il est possible d'utiliser la variable interne \texttt{WHILE\_COUNTER} pour récuperer le compteur de boucle.
-\end{xfr}
-
-\begin{xen}
-Repeat a block as long as the condition is evaluated as true. You may use the internal variable \texttt{WHILE\_COUNTER} variable to get the loop counter.
-\end{xen}
-
-\begin{code}
-cpt=10
-while cpt\textgreater 0
-\ ldi
-\ cpt=cpt-1
-\ print 'cpt=',cpt,' while\_counter=',while\_counter
-wend
-\end{code}
-
-\begin{xfr}
-La boucle va s'executer 10 fois, avec le résultat suivant sur la sortie standard:
-\end{xfr}
-
-\begin{xen}
-This code will loop 10 times with the following output:
-\end{xen}
-
-\begin{verbatim}
-Pre-processing [while.asm]
-Assembling
-cpt= 9.00 while_counter= 1.00
-cpt= 8.00 while_counter= 2.00
-cpt= 7.00 while_counter= 3.00
-cpt= 6.00 while_counter= 4.00
-cpt= 5.00 while_counter= 5.00
-cpt= 4.00 while_counter= 6.00
-cpt= 3.00 while_counter= 7.00
-cpt= 2.00 while_counter= 8.00
-cpt= 1.00 while_counter= 9.00
-cpt= 0.00 while_counter= 10.00
-Write binary file rasmoutput.bin (20 bytes)
-\end{verbatim}
-
-\subsubsection{\xlang{Définition d'une MACRO}{Macros}}\index{MACRO}\label{MACRO}\index{MEND}\index{ENDM}
-\begin{verbatim}
-MACRO <macro_name> [param1[,param2[,...]]]
-...
-MEND
-\end{verbatim}
-
-\begin{xfr}
-Une macro est une facon d'étendre le langage, en définissant un bloc d'instructions, délimité par \texttt{MACRO} et \texttt{MEND} (ou \texttt{ENDM}), et qui pourra être inséré ulterieurement dans le code, par simple utilisation du nom de la macro.
-Les macros peuvent prendre des parametres, il est ainsi possible de faire de l'assemblage conditionnel avec les macros : a  chaque appel de macro, le code d'origine est inséré, avec substitution des paramètres. Ce n'est qu'ensuite que le code interprété de façon classique.
-
-Voici un exemple pour une écriture longue distance générique (sauf pour B ou C):
-
-\end{xfr}
-
-\begin{xen}
-A macro is a way to extend the language, by defining a block of instructions, delimited by MACRO and \texttt{MEND} (or ENDM) directives, that can later be inserted in your code.
-Macros can take parameters, so you can make conditionnal assembling with it: a macro is barely a copy/paste with arguments replacement. Arguments inside the macro are referenced using curly brackets. Here is an example of a long distance indexing, working for any 16 bit register (except B or C):
-\end{xen}
-
-\begin{code}
-macro LDIXREG register,dep
-\ if \{dep\}\textless-128 || \{dep\}\textgreater127
-\ \ push BC
-\ \ ld BC,\{dep\}
-\ \ add IX,BC
-\ \ ld (IX+0),\{register\}
-\ \ pop BC
-\ else
-\ \ ld (IX+\{dep\}),\{register\}
-\ endif
-mend
-\end{code}
-
-\paragraph{\xlang{Utilisation d'une macro}{Macro invocation}}
-
-\begin{code}
-LDIXREG H,200
-LDIXREG L,32
-\end{code}
-
-\begin{xfr}
-Attention! Rasm ne peut pas savoir si vous voulez déclarer un label quand vous vous trompez dans l'écriture du nom d'une macro sans paramètre.
-Pour palier à ce défaut, vous pouvez ajouter un paramètre fictif "\texttt{(void)}"  qui déclenchera une erreur si le nom de macro n'est pas connu.
-
-De plus, si vous souhaitez forcer l'utilisation de cette syntaxe, il est possible de lancer RASM avec l'option \texttt{-void}.
-L'utilisation d'une macro sans parametre provoquera une erreur.
-\end{xfr}
-
-\begin{xen}
-Beware that RASM will understand any misspeled macro as a label declaration!
-A recommanded usage for macros without parameters, is to systematicaly use an empty parameter "\texttt{(void)}" .
-A misspeled macro call will then trigger an error.
-If you want to enforce usage of this syntax, you can use \texttt{-void} option. Using a macro without any parameter will raise an error.
-
-\end{xen}
-
-\begin{code}
-MACRO withoutparam
-nop
-MEND
-withoutparam (void) ; secured call of macro
-\end{code}
-
-\paragraph{\xlang{Appel de macro avec parametres dynamiques}{Macro calls with static or dynamic args}}
-
-\begin{xfr}
-Les parametres passés lors de l'appel d'une macro ne sont pas nécessairement des constantes, ils peuvent etre des expressions:
-\end{xfr}
-
-\begin{xen}
-Arguments sent to a macro can also be formulas. %either as text replacement, or as formula. %Evaluation that will be evaluated before substitution.
-\end{xen}
-
-\begin{code}
-MACRO test myarg
-\ DEFB \{myarg\}
-MEND
-
-;\xlang{Identique à }{Same as }1,2:
-REPEAT 2
-\ test repeat\_counter
-REND
-;\xlang{Identique à }{Same as }defb 1,1:
-
-REPEAT 2
-\ test \{eval\}repeat\_counter
-REND
-\end{code}
-
-
-%In the first loop, a 'defb repeat_counter' will be repeated.
-%In the second loop, a 'defb 1' will be repeated as the counter is previously evaluated.
-
-\subsubsection{\xlang{Labels Locaux}{Local labels}}\label{LOCALLABELS}
-\index{REPEAT}\index{WHILE}\index{UNTIL}\index{BRK}\index{Labels}
-
-\begin{xfr}
-  À l'intérieur d'une boucle (\texttt{REPEAT/WHILE/UNTIL}) ou d'une macro, il est possible d'utiliser des labels locaux de la même façon qu'avec l'assembleur intégré de Winape en préfixant le label par le caractère '\at'. L'interet est que l'on peut reutiliser le meme label a différents endroits du code, sans avoir a chercher des noms différents.
-
-  À chaque itération de boucle et ce pour chaque imbrication de boucle, un suffixe est ajouté au label local contenant la valeur hexadécimale du compteur interne de répétition. Il est ainsi possible d'appeler un label local à une répétition en dehors de la boucle, mais cet usage n'est pas conseillé.
-
-  Il est possible d'utiliser la valeur d'un label dans une commande (\texttt{ORG} par exemple) si et seulement si le label précède la directive.
-
-  En mode DAMS\index{DAMS}, il est possible d'utiliser la déclaration désuète d'un label en le préfixant d'un point. L'appel à ce label se fera sans le point du début. L'usage des labels de proximité est alors désactivé.
-
-\end{xfr}
-
-\begin{xen}
-Inside a loop (\texttt{REPEAT/WHILE/UNTIL}) or inside a macro, you can define local labels the same way as Winape assembler does, by prefixing labels with '\at'.
-You cannot use these labels outside of the loop or macro.
-
-%In DAMS mode, you may prefix labels with a dot, but the call to this label must be done without the dot. In DAMS mode proximity labels ares disabled.
-
-You can use label value with a directive (\texttt{ORG}\index{ORG} for example) only if the label was previously declared.
-Usage of local label in a loop:
-
-%Local labels must be declared inside a loop or a repeat.
-%Those labels are invisibles out of the loop scope.
-%Local labels are declared with prefix '\at'.
-
-\end{xen}
-
-% Question peut on combiner @BRK
-%\begin{xfr}
-%
-%\paragraph{Labels locaux non exportables}
-%  On peut déclarer un label local à l'intérieur d'une boucle ou d'une macro. Ce label sera invisible hors de son contexte (hors de la macro, ou à chaque répétition de boucle).
-%  Les labels locaux sont préfixés par le caractère '\at'.
-%
-%  Exemple d'utilisation d'un label local dans une boucle:
-%\end{xfr}
-
-\begin{code}
-repeat 16
-  add hl,bc
-  jr nc,\at no\_overflow
-  dec hl
-\at no\_overflow
-rend
-\end{code}
-
-\subsubsection{\xlang{Labels de proximité}{Proximity labels}}
-
-\begin{xfr}
-Hors d'une macro ou d'une boucle, les labels locaux héritent du label global qui précède. 
-A l'interieur d'une boucle ou d'une macro, ils sont relatifs au label qui précède, qui est soit global, soit local.
-Exemple d'utilisation d'un label de proximité avec un label global:
-\end{xfr}
-
-\begin{xen}
-Proximity labels are prefixed with a dot, and are associated with the previous label. 
-They can be used 'locally' directly with their 'short' names, and anymwhere with their full name:
-\end{xen}
-
-\begin{code}
-routine1:
-\ add hl,bc
-\ jr nc,.no\_overflow
-\ dec hl
-.no\_overflow
-\medskip
-routine2:
-\ add hl,bc
-\ jr nc,.no\_overflow
-\ dec hl
-.no\_overflow
-\medskip
-routine3:
-\ xor a
-\ ld hl,routine1.no\_overflow ; retrieve proximity label of routine1
-\ ld de,routine2.no\_overflow ; of routine2
-\ sbc hl,de
-\end{code}
-
-\subsubsection{\xlang{Combinaison de différents types de labels}{Mixing different kinds of labels}}
-
-\begin{xfr}
-L'exemple suivant permet de montrer les différentes combinaisons possibles, quand on mélange label global, local et de proximité. 
-Le code n'a pas grande utilité, si ce n'est à illustrer le principe:
-\end{xfr}
-
-\begin{code}
-  global: nop
-  .prox:  nop ; (1)
-  \medskip
-  repeat 2
-  \           jp .prox ;  (=> 1)
-  @label:   nop  ; (2)
-  .prox :   nop  ; (3)
-  @label2:  nop  ; (4)
-  .prox :   nop  ; (5) 
-  \           jp global.prox  ; (=> 1)
-  \           jp @label       ; (=> 2)
-  \           jp @label.prox  ; (=> 3)
-  \           jp @label2.prox ; (=> 5)
-  \           jp .prox        ; (=> 6)
-  rend
-  \medskip
-  \           jp .prox        ; (=> 1) 
-  \           jp global2.prox ; (=> 8)
-  \medskip
-  global2:    nop  ; (7)
-  \           jp .prox        ; (=> 8) 
-  .prox:      nop ; (8)
-  \           jp global.prox  ; (=> 1)
-  \           jp global2.prox ; (=> 8)
-  \           jp .prox        ; (=> 8) 
-  \end{code}
-  
+\subsection{\xlang{Labels et modules}{Labels and modules}}
+\include{labels}  
 
 \subsection{\xlang{Structures de données}{Structures}}
 
@@ -540,7 +231,6 @@ Le code n'a pas grande utilité, si ce n'est à illustrer le principe:
 STRUCT <prototype name> [,<variable name>]
 ...
 ENDSTRUCT
-
 \end{verbatim}
 
 \begin{xen}
